--- a/chicago_crime_app/other/Tensorflow-Keras-forecast-AggData.ipynb
+++ b/chicago_crime_app/other/Tensorflow-Keras-forecast-AggData.ipynb
@@ -2362,31 +2362,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'reshape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-70-a3b16ed89d93>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# example_result = model.predict(example_batch)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mto_predcit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m76\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mxxx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mto_predcit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'reshape'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[1.6663113]], dtype=float32)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "##########################This needs to be worked on. We should be able to use model.predcit and feed it an Arry consiting of\n",
     "## temperature and crime type dummies. The output should be number of crimes predicted by temp and type\n",
-    "\n",
-    "# example_batch = train_dataset[:10]\n",
-    "# example_result = model.predict(example_batch)\n",
-    "to_predcit = ([76,1,0,0,0,0])\n",
+    "import numpy as np\n",
+    "#these are the dummies: prediction (insert temp, and index numbers for crime type --see example)\n",
+    "#temp\tavg_incident_count\tPrimary Type_ASSAULT\tPrimary Type_BATTERY\tPrimary Type_CRIMINAL DAMAGE\tPrimary Type_NARCOTICS\tPrimary Type_THEFT\n",
+    "to_predcit = np.array([78,0,0,0,1,0]).reshape(1,-1)\n",
     "#This needs to be worked on. We should\n",
     "model.predict(to_predcit)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
